<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ekoapp.simplechat.messagelist.MessageListActivity">

    <item
        android:id="@+id/action_channel_membership"
        android:orderInCategory="100"
        android:title="@string/member"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_leave_channel"
        android:orderInCategory="200"
        android:title="@string/leave_channel"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_with_tags"
        android:orderInCategory="300"
        android:title="@string/with_tag"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_without_tags"
        android:orderInCategory="400"
        android:title="@string/without_tag"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_set_tags"
        android:orderInCategory="500"
        android:title="@string/set_tags"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_notification_for_current_channel"
        android:orderInCategory="600"
        android:title="@string/notification_for_current_channel"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_stack_from_end"
        android:orderInCategory="700"
        android:title="@string/stack_from_end"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_revert_layout"
        android:orderInCategory="800"
        android:title="@string/revert_layout"
        app:showAsAction="never" />

</menu>
